--- a/public/templates/partials/meta.html
+++ b/public/templates/partials/meta.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Base Meta -->
-    <title>Aika</title>
+    <title>Aiya</title>
     <meta name="description" content="A simple link shortener">
     <meta name="keywords" content="short, link, aika, moe, cute, URL, shortener, fast">
     <meta name="theme-color" content="#69caff">
