--- a/public/templates/partials/meta.html
+++ b/public/templates/partials/meta.html
@@ -6,6 +6,7 @@
     <meta name="description" content="A simple link shortener">
     <meta name="keywords" content="short, link, aika, moe, cute, URL, shortener, fast">
     <meta name="theme-color" content="#69caff">
+    <meta property="og:image" content="https://aiya.link/static/icon.png">
     <link rel="icon" href="/static/icon.png">
     <!-- Axios -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
